--- a/music_player/package.json
+++ b/music_player/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.11",
+    "expo": "^49.0.0",
+    "expo-cli": "^6.3.10",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.4.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "styled-components": "^6.0.8"
