--- a/music_player/app.json
+++ b/music_player/app.json
@@ -7,7 +7,7 @@
     "icon": "./assets/appLogo2.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/appLogo2.png",
+      "image": "./assets/logo-no-background2.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
