--- a/music_player/package.json
+++ b/music_player/package.json
@@ -14,14 +14,18 @@
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "^49.0.0",
     "expo-cli": "^6.3.10",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
     "firebase": "^10.4.0",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "styled-components": "^6.0.8",
-    "react-native-reanimated": "~3.3.0"
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
