--- a/music_player/package.json
+++ b/music_player/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "expo": "^49.0.0",
@@ -23,8 +23,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-redux": "^8.1.3",
-    "redux": "^4.2.1",
+    "react-native-web": "~0.19.6",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
