--- a/music_player/package.json
+++ b/music_player/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^1.19.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.6.1",
     "expo": "^49.0.0",
     "expo-cli": "^6.3.10",
     "expo-linear-gradient": "~12.3.0",
